--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Pomodoro alarms
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,27 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Pomodoro alarms</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ng-container *ngIf="current$ | async as current">
+    <ng-container *ngIf="config$ | async as config">
+      <div id="container">
+        <app-progress [title]="current.state.toString()" [value]="current.time" [buffer]="config.pauseTime" [max]="config.workTime + config.pauseTime"></app-progress>
+        <ion-button *ngIf="current.state !== States.WORK" [disabled]="current.time < config.workTime && current.state !== States.WAIT" (click)="start()">
+          Start
+        </ion-button>
+        <ion-button *ngIf="current.state == States.WORK" (click)="pause()">
+          Pause
+        </ion-button>
+        <ion-button *ngIf="current.state !== States.WAIT" (click)="stop()">
+          Stop
+        </ion-button>
+        <ion-button *ngIf="current.state === States.WAIT" (click)="stop()">
+          Reset
+        </ion-button>
+      </div>
+      </ng-container>
+  </ng-container>
 </ion-content>
