--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,32 +19,35 @@
         <ion-list>
           <ion-list-header>
             <ion-label>
-              <strong>Configuration</strong>
-            </ion-label>
-          </ion-list-header>
-          <app-form [disabled]="current.state !== States.WAIT"></app-form>
-        </ion-list>
-        <ion-list>
-          <ion-list-header>
-            <ion-label>
               <strong>Iteration {{ current.iteration }} / {{ config.maxIteration }}</strong>
             </ion-label>
           </ion-list-header>
-          <app-progress [title]="current.state.toString()" [value]="current.time" [buffer]="current.iteration >= config.maxIteration ? config.workTime : config.pauseTime"
-                        [max]="current.iteration >= config.maxIteration ? config.workTime * 2 : config.workTime + config.pauseTime"></app-progress>
-          <ion-button *ngIf="current.state !== States.WORK"
-                      [disabled]="current.time < config.workTime && current.state !== States.WAIT" (click)="start()">
+          <app-remain [current]="current" [config]="config"></app-remain>
+          <app-progress [title]="current.state.toString()" [value]="current.time" [buffer]="current.iteration >= config.maxIteration ? config.workTime : config.breakTime"
+                        [max]="current.iteration >= config.maxIteration ? config.workTime * 2 : config.workTime + config.breakTime"></app-progress>
+          <ion-button *ngIf="current.state === States.WAIT" (click)="start()">
             Start
           </ion-button>
-          <ion-button *ngIf="current.state == States.WORK" (click)="pause()">
-            Pause
+          <ion-button *ngIf="current.state === States.WORK" (click)="break()">
+            Break
           </ion-button>
-          <ion-button *ngIf="current.state !== States.WAIT" (click)="finish()">
+          <ion-button *ngIf="current.state === States.BREAK" (click)="finish()">
             Finish
+          </ion-button>
+          <ion-button *ngIf="current.state !== States.WAIT" (click)="stop()">
+            Stop
           </ion-button>
           <ion-button *ngIf="current.state === States.WAIT" (click)="reset()">
             Reset
           </ion-button>
+        </ion-list>
+        <ion-list>
+          <ion-list-header>
+            <ion-label>
+              <strong>Configuration</strong>
+            </ion-label>
+          </ion-list-header>
+          <app-form [disabled]="current.state !== States.WAIT"></app-form>
         </ion-list>
       </div>
     </ng-container>
