--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,11 @@
 #container a {
   text-decoration: none;
 }
+
+.smooth-collapse {
+  transition: all 0.5s ease-in-out;
+}
+
+.open {
+  transform: rotate(90deg);
+}
